# ProcessManagerService

./: CMakeLists.txt  Doxyfile  README.md
Packaging/: CMakePackageMacros.cmake  Packaging.cmake
Protocols/: CMakeLists.txt
Source/: CMakeLists.txt
Source/include/: Communication.hpp  Event.hpp  EventManager.hpp  Logging.hpp  MongoModulesCollection.hpp  Service.hpp  ServiceBase.hpp  ServiceCommon.hpp  ServiceConfiguration.hpp  ServiceConfigurationReader.hpp  ServiceConnection.hpp  ServiceContextWorker.hpp  ServiceGlobals.hpp  ServiceMessageEventsCache.hpp  ServiceModulesCache.hpp  ServiceModulesServer.hpp  ServiceSubscriptionEventsCache.hpp  ServiceTask.hpp  ServiceWatchdogConnection.hpp  ServiceWatchdogConnectionState.hpp  ServiceWatchdogResponseHandlers.hpp
Source/src/: EventManager.cpp  MongoModulesCollection.cpp  ServiceBase.cpp  ServiceConfiguration.cpp  ServiceConfigurationReader.cpp  ServiceConnection.cpp  ServiceContextWorker.cpp  ServiceGlobals.cpp  ServiceMain.cpp  ServiceMessageEventsCache.cpp  ServiceModulesCache.cpp  ServiceModulesServer.cpp  ServiceSubscriptionEventsCache.cpp  ServiceWatchdogConnection.cpp  ServiceWatchdogConnectionState.cpp  ServiceWatchdogResponseHandlers.cpp  SystemManager.cpp  SystemManagerMain.cpp
Tests/: CMakeLists.txt
Tests/ExampleServicesTests/: CMakeLists.txt
Tests/ExampleServicesTests/ServiceOneTest/: CMakeLists.txt  GPS.proto  GpsCoordinates.cpp  GpsCoordinates.hpp  ServiceOneTestMain.cpp
Tests/MessageEventsTests/: CMakeLists.txt  Example.proto  MessageEventsTest.cpp
Tests/ServiceWatchdogResponseHandlersTests/: CMakeLists.txt  ServiceWatchdogConnectResponseTest.cpp  ServiceWatchdogPingResponseTest.cpp  ServiceWatchdogReconnectResponseTest.cpp
Toolkits/: artifactory_downloader.sh
